<resources>
    <string name="app_name">PlanMate</string>
    <string name="login">LOGIN</string>
    <string name="usuario">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="ver_tareas_pendientes">Ver Tareas Pendientes</string>
    <string name="crear_tarea">Crear Tarea</string>
    <string name="tarea_t_tulo">TAREA - TÍTULO</string>
    <string name="detalles">DETALLES</string>
    <string name="categor_a">CATEGORÍA</string>
    <string name="terminar_tarea">Terminar Tarea</string>
    <string name="editar_tarea">Editar Tarea</string>
    <string name="agregar_comentario">Agregar Comentario</string>
    <string name="profesor">PROFESOR</string>
    <string name="fecha_entrega">FECHA ENTREGA</string>
    <string name="nombre_profesor">NOMBRE PROFESOR</string>
    <string name="guardar_tarea">Guardar Tarea</string>
    <string name="asignar_materia">Asignar Materia</string>
    <string name="nombre_materia">NOMBRE MATERIA</string>
    <string name="correo_profesor">CORREO PROFESOR</string>
    <string name="nrc_clase">NRC CLASE</string>
    <string name="comentario">COMENTARIO</string>
    <string-array name="categorias">
        <item>Facil</item>
        <item>Medio</item>
        <item>Dificil</item>
    </string-array>
</resources>