<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesTareaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:srcCompat="@android:drawable/ic_menu_set_as" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_color"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tarea_t_tulo"
                android:textColor="@color/darkpurple"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detalles_tarea"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/white"
                android:gravity="center|top"
                android:padding="20dp"
                android:text="@string/detalles"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nombre_profesor"
                android:textColor="@color/darkpurple"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_nombre_profesor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/categor_a"
                android:textColor="@color/darkpurple"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_materia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:onClick="MateriaEmergente"
                android:text="MATERIA"
                android:textColor="@color/darkpurple"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:onClick="ComentarioEmergente"
                android:text="FECHA"
                android:textColor="@color/darkpurple"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnActualizarTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:backgroundTint="@color/darkpurple"
                android:onClick="EditarTarea"
                android:padding="15dp"
                android:text="@string/editar_tarea"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btn_terminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:backgroundTint="@color/darkpurple"
                android:padding="15dp"
                android:text="@string/terminar_tarea"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>