<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:onClick="cerrarSesion"
                app:srcCompat="@android:drawable/ic_menu_set_as" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_color"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_vertareas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="170dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:onClick="VerTareas"
                android:padding="20dp"
                android:text="@string/ver_tareas_pendientes"
                android:textColor="@color/darkpurple"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_creartarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:onClick="CrearTarea"
                android:padding="20dp"
                android:text="@string/crear_tarea"
                android:textColor="@color/darkpurple"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_creartarea2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:background="@drawable/shape_button"
                android:backgroundTint="@color/green"
                android:onClick="AsignarMateria"
                android:padding="20dp"
                android:text="@string/asignar_materia"
                android:textColor="@color/darkpurple"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>